hermes_fuzz_executed_few_shot_v2/fuzz_52_execution
'use strict';
<fim_middle>var _a;
Array.prototype.reduce.call([1, 2, 3], function (accumulator, value) { return accumulator + value * 2; }, 1) === 27


Execution Output ------------------:
test.js:2:1: error: invalid expression (possible JSX: pass -parse-jsx to parse)
<fim_middle>var _a;
^
